	  functions which similar to popen() and pclose() create a
	  file descriptor which either takes data to feed into a
	  filter function or provides data coming out of a filter
	  function.
	- libcupsfilters: Extended ieee1284NormalizeMakeAndModel() to
	  a universal function to clean up and normalize make/model
	  strings (also device IDs) to get human-readable,
	  machine-readable, or easily sortable make/model strings.
	- libcupsfilters: Added NULL check when removing ".Borderless"
	  suffixes from page size names (Issue #314).
	- libcupsfilters, parallel, test1284: Moved
	  IEEE1284-device-ID-related functions into the public API of
	  libcupsfilters, also made the internal functions public and
	  renamed them all to ieee1284...(), moved test1284 to
	  cupsfilters/.
	- foomatic-rip: Remove temporary file created during pdf-to-ps
	  conversion (Pull request #313).
	- libppd: Added PPD collection handling functions (based on
	  the code of cups-driverd in CUPS), for listing collections
	  of PPD files and picking a PPD out of the collection.  PPDs
	  can be in arbitrary subdirectory structures, .tar and
	  .tar.gz files, and also be generated by executables, as one
	  uses them with CUPS in /usr/lib/cups/driver. This is for
	  Printer Applications which retro-fit classic CUPS drivers.
	- libppd, libcupsfilters: Share the definition of logging functions
	  between the two libraries, so that the same logging functions
	  can be used with both.
	- Sample PPDs: Corrected manufacturer name in
	  Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd.
	- texttopdf: Added support for PPD-less use.
	- libcupsfilters, imagetops: Introduced imagetops() filter
	  function for Printer Application to print on PostScript
	  printers. It is used to print images (IPP standard requires
	  at least JPEG to be accepted) without need of a PDF renderer
	  (imagetopdf -> pdftops) and without need to convert to
	  Raster (imagetoraster -> rastertops). The CUPS filter