@@ -255,7 +255,10 @@ CHANGES IN V2.0.0
 	- libcupsfilters: Extended ieee1284NormalizeMakeAndModel() to
 	  a universal function to clean up and normalize make/model
 	  strings (also device IDs) to get human-readable,
-	  machine-readable, or easily sortable make/model strings.
+	  machine-readable, or easily sortable make/model
+	  strings. Also allow supplying a regular expression to
+	  extract driver information when the input string is a PPD's
+	  *NickName.
 	- libcupsfilters: Added NULL check when removing ".Borderless"
 	  suffixes from page size names (Issue #314).
 	- libcupsfilters, parallel, test1284: Moved
